--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,14 @@ name = "rust-blockchain"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "blockchainlib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "blockchain"
+path = "src/main.rs"
+
 [dependencies]
+hex = "0.4.3"
+crypto-hash = "0.3.3"
